common-applications/test-environment/aigc-pr-review/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: aigc-pr-review
  name: aigc-pr-review
