common-applications/test-environment/aigc-pr-review/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: aigc-pr-review
spec:
  ports:
  - name: http-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: server
  type: ClusterIP
